# multiarch-gnu-toolchain

./: .gitignore  MODIFICATIONS  README.md  config.yml
.github/workflows/: 14.yml  20.yml  21.yml  ci.yml  deploy.yml  upload.yml  verify.yml
all/: conandata.yml  conanfile.py
all/test_package_old/: CMakeLists.txt  conanfile.py  main.cpp
conan/profiles/v1/: cortex-m0  cortex-m0plus  cortex-m1  cortex-m23  cortex-m3  cortex-m33  cortex-m33f  cortex-m35p  cortex-m35pf  cortex-m4  cortex-m4f  cortex-m55  cortex-m7  cortex-m7d  cortex-m7f  cortex-m85  gcc-14  linux_arm  llvm-20  llvm-21  macos_arm  macos_x86_64  windows_arm  windows_x86_64
demos/cpp/: CMakeLists.txt  conanfile.py  main.cpp
demos/cpp-modules/: CMakeLists.txt  conanfile.py  main.cpp  module.cppm
